--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="https://fav.farm/🔥" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de IMC</title>
   </head>
-  <body>
+  <body class="bg-zinc-100 min-h-screen py-20">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
